# pylog

./: .gitignore  README.md  requirements.txt  setup.cfg  upload_to_testpy.sh
pylogus/: __init__.py  pylogus.py  version.py
test/: example.py
