[metadata]
name = pylogus
version = attr: pylogus.version.VERSION
author = Viacheslav
author_email = Viacheslav@mcublog.ru
description = Simple log format and other stuff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/pylog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    colorama

[options.packages.find]
exclude =
    pylogus.egg-info*
    test*
    env*